--- a/source/Solution/Server/MainWindow.xaml
+++ b/source/Solution/Server/MainWindow.xaml
@@ -1,13 +1,19 @@
 ﻿<Window x:Class="EnigmaMM.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:d3="http://research.microsoft.com/DynamicDataDisplay/1.0"
+        xmlns:Extensions="clr-namespace:EnigmaMM"
+        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="75" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="100"/>
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="23" />
+        </Grid.RowDefinitions>
 
         <StackPanel Grid.Column="0" Grid.Row="0"  Name="uxButtonStackPanel">
             <Button Name="uxStartButton" Content="Start" Margin="5" Click="uxStartButton_Click" />
@@ -21,7 +27,10 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ListView Grid.Column="1" Grid.Row="0" Name="uxLogListView">
+            <ListView 
+                Name="uxLogListView" 
+                Grid.Column="1" Grid.Row="0" 
+                Extensions:LVColumnStretchProperty.Stretch="true" SourceUpdated="uxLogListView_SourceUpdated">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=Message}">
@@ -31,18 +40,35 @@
             </ListView>
             <TextBox Grid.Column="1" Grid.Row="1" Name="uxCommandInput" PreviewKeyDown="uxCommandInput_PreviewKeyDown" />
         </Grid>
-
-        <ListView Grid.Column="2" Grid.Row="0" Name="uxUserListView">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Width="90">
-                        <GridViewColumn.Header>
+        <StatusBar Name="uxStatusBar" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
+            <StatusBarItem>
+                <Image Name="uxStatusBarStatusIcon" Width="16" Height="16"></Image>
+            </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock Name="uxStatusBarStatus">Ready</TextBlock>
+            </StatusBarItem>
+        </StatusBar>
+        
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            <ListView Name="uxUserListView" Grid.Row="0">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Width="90">
+                            <GridViewColumn.Header>
                                 <GridViewColumnHeader Content="User" HorizontalAlignment="Left" Width="90" Padding="0" />
-                        </GridViewColumn.Header>
-                    </GridViewColumn>
-                </GridView>
-            </ListView.View>
-        </ListView>
- 
+                            </GridViewColumn.Header>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+
+            <d3:ChartPlotter Name="uxUserChart" Grid.Row="1" Height="150">
+            </d3:ChartPlotter>
+        </Grid>
     </Grid>
 </Window>
