--- a/source/Solution/Server/MainWindow.xaml
+++ b/source/Solution/Server/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Extensions="clr-namespace:EnigmaMM"
-        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded" Closing="Window_Closing">
+        Title="Enigma Minecraft Manager" Height="350" Width="525" Loaded="Window_Loaded" Closing="Window_Closing" Icon="/Server;component/server.ico">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="75" />
